Moving back to Java 11